SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

if(NOT EMSCRIPTEN)
    FOREACH(subdir ${SUBDIRS})
        if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt")
            add_subdirectory(${subdir})
        endif()
    ENDFOREACH()
else()
    add_subdirectory(test_3d_passive_cantilever_neohookean)
endif()